<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/action_animometro"
        android:title="@string/menu_animometro"
        android:enabled="true"
        android:icon="@mipmap/ic_menu_animometro_off"
        app:showAsAction="ifRoom"/>
    <item android:id="@+id/action_eventos"
        android:title="@string/menu_eventos"
        android:enabled="true"
        android:icon="@mipmap/ic_eventos_off"
        app:showAsAction="ifRoom"/>
    <item android:id="@+id/action_recompensas"
        android:title="@string/menu_recompensas"
        android:enabled="true"
        android:icon="@mipmap/ic_eventos_off"
        app:showAsAction="ifRoom"/>

</menu>