<layout>
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="10"
        android:padding="@dimen/screen_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:orientation="vertical"
            android:gravity="center">
            <com.bbva.intranet.behappy.components.FaceTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Text.Size22"
                android:textColor="@color/navy"
                android:text="@string/label_animometro_como_tesientes"/>
            <com.bbva.intranet.behappy.components.FaceTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Text.Size16"
                android:textColor="@color/black600"
                android:text="@string/label_animometro_instrucciones"
                android:layout_marginTop="7dp"/>
        </LinearLayout>
        <com.bbva.intranet.behappy.components.CenterLockHorizontalScrollView
            android:id="@+id/scrollView_header"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.8"
            android:padding="3dp"
            android:scrollbars="none">
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:gravity="center">
            </LinearLayout>
        </com.bbva.intranet.behappy.components.CenterLockHorizontalScrollView>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="5.2">
            <android.support.v4.view.ViewPager
                android:id="@+id/viewpager"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
            <ProgressBar
                android:id="@+id/progress"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:indeterminate="true"
                android:visibility="gone"
                android:layout_gravity="center" />
        </FrameLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center">
            <com.bbva.intranet.behappy.components.FaceTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Text.Size20"
                android:textColor="@color/aqua"
                android:text="@string/label_er_estadisticas"/>
        </LinearLayout>
    </LinearLayout>
</layout>
